tests/snapshots/sdk_snapshot_gallery__openai__openai_request_minimal.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: req
---
{
  "model": "gpt-4o-mini",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ]
}
