tests/snapshots/sdk_snapshot_gallery__openai__openai_request_multimodal.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What is in this image?"
        },
        {
          "type": "image_url",
          "image_url": {
            "url": "https://example.com/image.png",
            "detail": "high"
          }
        }
      ]
    }
  ],
  "max_tokens": 512
}
