tests/snapshots/sdk_snapshot_gallery__openai__openai_request_tool_result.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "assistant",
      "tool_calls": [
        {
          "id": "call_abc123",
          "type": "function",
          "function": {
            "name": "get_weather",
            "arguments": "{\"location\":\"London\"}"
          }
        }
      ]
    },
    {
      "role": "tool",
      "content": "{\"temp\": 15, \"unit\": \"celsius\"}",
      "tool_call_id": "call_abc123"
    }
  ]
}
