tests/snapshots/sdk_snapshot_gallery__openai__openai_response_tool_calls.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: resp
---
{
  "id": "chatcmpl-tool456",
  "object": "chat.completion",
  "created": 1700000100,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "call_xyz789",
            "type": "function",
            "function": {
              "name": "search_docs",
              "arguments": "{\"query\":\"rust async\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 20,
    "total_tokens": 70
  }
}
