tests/snapshots/sdk_snapshot_gallery__openai__openai_stream_chunk_text.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: chunk
---
{
  "id": "chatcmpl-stream001",
  "object": "chat.completion.chunk",
  "created": 1700000200,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {
        "content": "Hello"
      }
    }
  ]
}
