tests/snapshots/sdk_snapshot_gallery__openai__openai_tool_choice_function.snap
---
source: tests/sdk_snapshot_gallery.rs
expression: tc
---
{
  "type": "function",
  "function": {
    "name": "get_weather"
  }
}
